# sticky-notes

./: .gitignore  README.md  pyproject.toml  tox.ini
analysis/: 2. image_extraction.ipynb  4. model_training.ipynb  5. model_analysis.ipynb  6. real_world_model_testing.ipynb  video_segment.py
analysis/stickynet/: config.yaml  gcp-training.ipynb
analysis/stickynet/trainer/: model.py  task.py
note-net/: hptuning_config.yaml
note-net/trainer/: model.py
notebooks/: 3. image_generation.ipynb  4. model_training.ipynb  utils.py
sticky-net/: gcp-training.ipynb  setup.py
sticky-net/trainer/: model.py  task.py
